--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-7 col-sm-9">
                     <div class="footer-widget footer-widget-about">
-                        <a href="#"><img src="assets/images/logo.png" alt="logo"></a>
+                        <a href="#"><img src="assets/images/TimeCaptain.png" alt="logo"></a>
                         <p>Make homework lists, shopping lists, to-do task lists to improve your productivity and focus on what matters most that day!</p>
                         <ul>
                             <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
