--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                     <div class="col-lg-12">
                         <div class="navigation">
                             <nav class="navbar navbar-expand-lg navbar-light ">
-                                <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt=""></a> <!-- logo -->
-                                <a class="navbar-brand-2" href="index.html"><img src="assets/images/logo-2.png" alt=""></a> <!-- logo -->
+                                <a class="navbar-brand" href="index.html"><img src="assets/images/tc1.png" alt=""></a> <!-- logo -->
+                                <a class="navbar-brand-2" href="index.html"><img src="assets/images/tc1.png" alt=""></a> <!-- logo -->
                                 <span class="side-menu__toggler"><i class="fa fa-bars"></i></span><!-- /.side-menu__toggler -->
                                                                   
                                 <div class="collapse navbar-collapse sub-menu-bar main-nav__main-navigation" id="navbarSupportedContent">
