--- a/index.html
+++ b/index.html
@@ -123,8 +123,12 @@
                                         <li class="nav-item dropdown">
                                             <a class="nav-link page-scroll" href="#news">News</a>
                                             <ul class="sub-menu">
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="blog-details.html">Single Blog</a></li>
+                                                <li><a href="terms.html">Terms</a></li>
+                                                <li><a href="privacy.html">Privacy Policy</a></li>
+
+
+                                                <!-- <li><a href="blog.html">Blog</a></li>
+                                                <li><a href="blog-details.html">Single Blog</a></li> -->
                                             </ul>
                                         </li>
                                     </ul>
