--- a/blog-details.html
+++ b/blog-details.html
@@ -66,8 +66,9 @@
                     <div class="col-lg-12">
                         <div class="navigation">
                             <nav class="navbar navbar-expand-lg navbar-light ">
-                                <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt=""></a> <!-- logo -->
-                                <a class="navbar-brand-2" href="index.html"><img src="assets/images/logo-2.png" alt=""></a> <!-- logo -->
+                                <a class="navbar-brand" href="index.html"><img src="assets/images/timecaptainSq150-header.png" alt=""></a> <!-- logo -->
+                                <a class="navbar-brand-2" href="index.html"><img src="assets/images/timecaptainSq150-header125.png" alt=""></a> <!-- logo -->
+
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                     <span class="toggler-icon"></span>
                                     <span class="toggler-icon"></span>
