--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </div>
                     <div class="col-lg-6 col-md-5">
                         <div class="banner-thumb text-right wow fadeInUp" data-wow-duration="1500ms">
-                            <img src="assets/images/banner-thumb.png" alt="banner">
+                            <img src="assets/images/1-368x696.jpg" alt="banner">
                         </div>
                     </div>
                 </div>
