updared some images

--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div class="about-thumb  wow fadeInLeft" data-wow-duration="1500ms">
-                        <img src="assets/images/about-thumb.png" alt="">
-                        <div class="about-thumb-1">
-                            <img src="assets/images/about-item-1.png" alt="">
+                        <img src="assets/images/light2-333x628.jpg" alt="">
+                        <!-- <div class="about-thumb-1">
+                            <img src="assets/images/3-224x143.jpg" alt="">
                         </div>
                         <div class="about-thumb-2">
-                            <img src="assets/images/about-item-2.png" alt="">
-                        </div>
+                            <img src="assets/images/4-222x62.png" alt="">
+                        </div> -->
                     </div>
                 </div>
                 <div class="col-lg-6">
