--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             </div>
         </div>
         <div class="business-thumb text-right">
-            <img src="assets/images/business-thumb.jpg" alt="">
+            <img src="assets/images/5-862-640.png" alt="">
         </div>
         <div class="business-shape"></div>
     </section>
@@ -393,7 +393,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="customers-thumb wow fadeInLeft" data-wow-duration="1500ms">
-                        <img src="assets/images/customers-thumb.png" alt="customers">
+                        <img src="assets/images/6-528x515.jpg" alt="customers">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-9">
@@ -454,13 +454,13 @@
                     <div class="testimonials-user-item">
                         <div class="testimonials-thumb pl-110">
                             <div class="item">
-                                <img src="assets/images/testimonials-user-1.png" alt="">
+                                <img src="assets/images/7-255x255.png" alt="">
                             </div>
                             <div class="item">
-                                <img src="assets/images/testimonials-user-2.png" alt="">
+                                <img src="assets/images/7-255x255.png" alt="">
                             </div>
                             <div class="item">
-                                <img src="assets/images/testimonials-user-3.png" alt="">
+                                <img src="assets/images/7-255x255.png" alt="">
                             </div>
                         </div>
                         <div class="testimonials-user">
