finished uploads to website

--- a/index.html
+++ b/index.html
@@ -465,22 +465,22 @@
                         </div>
                         <div class="testimonials-user">
                             <div class="item-1">
-                                <img src="assets/images/testimonials/user-1.png" alt="testimonials">
+                                <img src="assets/images/testimonials/11-72x71-1.png" alt="testimonials">
                             </div>
                             <div class="item-2">
-                                <img src="assets/images/testimonials/user-2.png" alt="testimonials">
+                                <img src="assets/images/testimonials/11-72x71-2.png" alt="testimonials">
                             </div>
                             <div class="item-3">
-                                <img src="assets/images/testimonials/user-3.png" alt="testimonials">
+                                <img src="assets/images/testimonials/11-72x71-3.png" alt="testimonials">
                             </div>
                             <div class="item-4">
-                                <img src="assets/images/testimonials/user-4.png" alt="testimonials">
+                                <img src="assets/images/testimonials/11-72x71-4.png" alt="testimonials">
                             </div>
                             <div class="item-5">
-                                <img src="assets/images/testimonials/user-5.png" alt="testimonials">
+                                <img src="assets/images/testimonials/11-72x71-5.png" alt="testimonials">
                             </div>
                             <div class="item-6">
-                                <img src="assets/images/testimonials/user-6.png" alt="testimonials">
+                                <img src="assets/images/testimonials/11-72x71-6.png" alt="testimonials">
                             </div>
                         </div>
                     </div>
@@ -545,34 +545,34 @@
             <div class="row screenshot-active">
                 <div class="col-lg-3">
                     <div class="screenshot-item">
-                        <img src="assets/images/screenshot-1.jpg" alt="">
+                        <img src="assets/images/8-278x471-1.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3">
+                    <div class="screenshot-item">
+                        <img src="assets/images/8-278x471-2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="screenshot-item">
+                        <img src="assets/images/8-278x471-3.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="screenshot-item">
+                        <img src="assets/images/8-278x471-4.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="screenshot-item">
+                        <img src="assets/images/8-278x471-5.jpg" alt="">
+                    </div>
+                </div>
+                <!-- <div class="col-lg-3">
                     <div class="screenshot-item">
                         <img src="assets/images/screenshot-2.jpg" alt="">
                     </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="screenshot-item">
-                        <img src="assets/images/screenshot-3.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="screenshot-item">
-                        <img src="assets/images/screenshot-4.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="screenshot-item">
-                        <img src="assets/images/screenshot-5.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="screenshot-item">
-                        <img src="assets/images/screenshot-2.jpg" alt="">
-                    </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -589,7 +589,7 @@
                         <span>Have any questions?</span>
                         <h3 class="title">Frequently Asked Questions</h3>
                         <p>There are many variations of passages of available but majority have alteration in some by inject humour or random words. Lorem ipsum dolor sit amet.</p>
-                        <img src="assets/images/faq-thumb.jpg" alt="">
+                        <img src="assets/images/9-470x179.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-7">
@@ -703,7 +703,7 @@
                 <div class="col-lg-4 col-md-7 col-sm-9">
                     <div class="blog-item mt-30">
                         <div class="blog-thumb">
-                            <img src="assets/images/blog-1.jpg" alt="blog">
+                            <img src="assets/images/10-370x251-1.jpg" alt="blog">
                         </div>
                         <div class="blog-content">
                             <ul>
@@ -718,7 +718,7 @@
                 <div class="col-lg-4 col-md-7 col-sm-9">
                     <div class="blog-item mt-30">
                         <div class="blog-thumb">
-                            <img src="assets/images/blog-2.jpg" alt="blog">
+                            <img src="assets/images/10-370x251-2.png" alt="blog">
                         </div>
                         <div class="blog-content">
                             <ul>
@@ -733,7 +733,7 @@
                 <div class="col-lg-4 col-md-7 col-sm-9">
                     <div class="blog-item mt-30">
                         <div class="blog-thumb">
-                            <img src="assets/images/blog-3.jpg" alt="blog">
+                            <img src="assets/images/10-370x251-3.png" alt="blog">
                         </div>
                         <div class="blog-content">
                             <ul>
