--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="counter-item text-center mt-30 item-3 wow fadeInUp animated" data-wow-duration="1000ms" data-wow-delay="200ms">
                         <h3 class="title odometer"  data-count="9">00</h3>
-                        <span>5 Star odometer</span>
+                        <span>App Improvements</span>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -707,11 +707,11 @@
                         </div>
                         <div class="blog-content">
                             <ul>
-                                <li><a href="#"><i class="fa fa-clock-o"></i> 20 Feb</a></li>
-                                <li><a href="#"><i class="fa fa-comments-o"></i> 2 Comments</a></li>
+                                <li><a href="#"><i class="fa fa-clock-o"></i> 03 Feb</a></li>
+                                <li><a href="#"><i class="fa fa-comments-o"></i> 3 Comments</a></li>
                             </ul>
-                            <h4 class="title"><a href="blog-details.html">Launch New Mobile App Marketing Pitfalls To Avoid</a></h4>
-                            <a href="blog-details.html"><i class="flaticon-right"></i></a>
+                            <h4 class="title"><a href="#">Launch New Mobile App Marketing Pitfalls To Avoid</a></h4>
+                            <a href="#"><i class="flaticon-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -722,11 +722,11 @@
                         </div>
                         <div class="blog-content">
                             <ul>
-                                <li><a href="#"><i class="fa fa-clock-o"></i> 20 Feb</a></li>
-                                <li><a href="#"><i class="fa fa-comments-o"></i> 2 Comments</a></li>
+                                <li><a href="#"><i class="fa fa-clock-o"></i> 23 March</a></li>
+                                <li><a href="#"><i class="fa fa-comments-o"></i> 1 Comment</a></li>
                             </ul>
-                            <h4 class="title"><a href="blog-details.html">Launch New Mobile App Marketing Pitfalls To Avoid</a></h4>
-                            <a href="blog-details.html"><i class="flaticon-right"></i></a>
+                            <h4 class="title"><a href="#">Launch New Mobile App Marketing Pitfalls To Avoid</a></h4>
+                            <a href="#"><i class="flaticon-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -737,11 +737,11 @@
                         </div>
                         <div class="blog-content">
                             <ul>
-                                <li><a href="#"><i class="fa fa-clock-o"></i> 20 Feb</a></li>
+                                <li><a href="#"><i class="fa fa-clock-o"></i> 2 April</a></li>
                                 <li><a href="#"><i class="fa fa-comments-o"></i> 2 Comments</a></li>
                             </ul>
-                            <h4 class="title"><a href="blog-details.html">Launch New Mobile App Marketing Pitfalls To Avoid</a></h4>
-                            <a href="blog-details.html"><i class="flaticon-right"></i></a>
+                            <h4 class="title"><a href="#">Launch New Mobile App Marketing Pitfalls To Avoid</a></h4>
+                            <a href="#"><i class="flaticon-right"></i></a>
                         </div>
                     </div>
                 </div>
