--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                         </li>
                                        
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link page-scroll" href="#news">News</a>
+                                            <a class="nav-link page-scroll" href="#">T&S</a>
                                             <ul class="sub-menu">
                                                 <li><a href="terms.html">Terms</a></li>
                                                 <li><a href="privacy.html">Privacy Policy</a></li>
@@ -161,7 +161,7 @@
                     </div>
                     <div class="col-lg-6 col-md-5">
                         <div class="banner-thumb text-right wow fadeInUp" data-wow-duration="1500ms">
-                            <img src="assets/images/1-368x696.jpg" alt="banner">
+                            <img src="assets/images/light1-368-696.jpg" alt="banner">
                         </div>
                     </div>
                 </div>
