CodePen Button Style

--- a/index.html
+++ b/index.html
@@ -133,9 +133,13 @@
                                         </li>
                                     </ul>
                                 </div> <!-- navbar collapse -->
-                                <div class="navbar-btn d-none d-sm-flex">
+                                <!-- <div class="navbar-btn d-none d-sm-flex">
                                     <a class="main-btn" href="#">Download App</a>
-                                </div>
+                                </div> -->
+
+                                
+
+
                             </nav>
                         </div> <!-- navigation -->
                     </div>
