--- a/index.html
+++ b/index.html
@@ -136,8 +136,15 @@
                                 <!-- <div class="navbar-btn d-none d-sm-flex">
                                     <a class="main-btn" href="#">Download App</a>
                                 </div> -->
-
-                                
+                                <!-- Download Buton -->
+                                    <div class="navbar-btn d-none d-sm-flex">
+                                    <!-- <button class="btn btn-dark app-button mb-3"><i class="fa fa-apple fa-2x"></i><span class="text-uppercase ml-2">Apple store</span></button> </div> -->
+                                    <a href="#" class="btn btn-store">
+                                        <span class="fa fa-apple fa-3x pull-left"></span> 
+                                        <span class="btn-label">Download on the</span>
+                                        <span class="btn-caption">App Store</span>
+                                    </a>
+                                </div>
 
 
                             </nav>
