diabled some Buttons

--- a/index.html
+++ b/index.html
@@ -296,8 +296,19 @@
                             <li><i class="fa fa-check-circle"></i> Time Captn lets you get sh*t done by breaking up individual tasks into 30 min intervals.</li>
                             <li><i class="fa fa-check-circle"></i> Surprisingly effective way to retain motivation and focus.</li>
                             <li><i class="fa fa-check-circle"></i> Stay focused whenever, wherever.</li>
+                            <br>
                         </ul>
-                        <a class="main-btn mt-50" href="#">Download from App Store</a>
+                        <!-- <a class="main-btn mt-50" href="#">Download from App Store</a> -->
+                                                        <!-- Download Buton -->
+                                                        <div class="navbar-btn d-none d-sm-flex">
+                                                            <!-- <button class="btn btn-dark app-button mb-3"><i class="fa fa-apple fa-2x"></i><span class="text-uppercase ml-2">Apple store</span></button> </div> -->
+                                                            <a href="#" class="btn btn-store">
+                                                                <span class="fa fa-apple fa-3x pull-left"></span> 
+                                                                <span class="btn-label">Download on the</span>
+                                                                <span class="btn-caption">App Store</span>
+                                                            </a>
+                                                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -384,7 +395,7 @@
                             </div>
                         </div>
                         <p>Lorem Ipsum is simply dummy text of the printing and type setting industry. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts. Lorem Ipsum has been the dummy text ever since the 1500s.</p>
-                        <a class="main-btn" href="#">Discover More</a>
+                        <!-- <a class="main-btn" href="#">Discover More</a> DISABLED -->
                     </div>
                 </div>
             </div>
