--- a/index.html
+++ b/index.html
@@ -371,37 +371,37 @@
                 <div class="col-lg-7">
                     <div class="business-content">
                         <div class="section-title">
-                            <span>We do more for your world</span>
-                            <h3 class="title">Powerful Mobile Application For Your Business</h3>
+                            <span>Plan, Organize & Schedule Tasks</span>
+                            <h3 class="title">Control your time before it controls you!</h3>
                         </div>
                         <div class="row mr-110">
                             <div class="col-sm-4">
                                 <div class="business-item">
                                     <i class="flaticon-business"></i><br>
-                                    <span>Our Business <br> Strategy</span>
+                                    <span>Create Lists <br> of Tasks</span>
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="business-item item-2">
                                     <i class="flaticon-people"></i><br>
-                                    <span>New Online <br> Marketing</span>
+                                    <span>Cross Device <br> Support</span>
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="business-item item-3">
                                     <i class="flaticon-human-resources"></i><br>
-                                    <span>Top Consumer <br> Products</span>
+                                    <span>Track Completed <br> Tasks</span>
                                 </div>
                             </div>
                         </div>
-                        <p>Lorem Ipsum is simply dummy text of the printing and type setting industry. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts. Lorem Ipsum has been the dummy text ever since the 1500s.</p>
+                        <p>Stay focused with Time Captain, a personalized daily planner with timed "Pomodoro" style tasks. Get your lists anywhere, on any Apple device. Share your list with anyone and add notes to any task.</p>
                         <!-- <a class="main-btn" href="#">Discover More</a> DISABLED -->
                     </div>
                 </div>
             </div>
         </div>
         <div class="business-thumb text-right">
-            <img src="assets/images/5-862-640.png" alt="">
+            <img src="assets/images/5-862-640-v2.jpg" alt="">
         </div>
         <div class="business-shape"></div>
     </section>
