--- a/index.html
+++ b/index.html
@@ -421,16 +421,19 @@
                 <div class="col-lg-6 col-md-9">
                     <div class="section-title">
                         <span>We do more for your world</span>
-                        <h3 class="title">Discover Tools For Your Repeat Customers</h3>
+                        <h3 class="title">4 Steps to developing good daily habits</h3>
                     </div>
                     <div class="customers-content">
                         <div class="item">
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry when an unknown printer took a galley of type and scrambled it to make. </p>
                         </div>
+    
                         <div class="item mt-35">
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-                            <a class="main-btn mt-50" href="#">Discover More</a>
+                            <!-- <a class="main-btn mt-50" href="#">Discover More</a>  DISABLED-->
                         </div>
+
+        
                     </div>
                 </div>
             </div>
