fixed footer download button

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="customers-thumb wow fadeInLeft" data-wow-duration="1500ms">
-                        <img src="assets/images/6-528x515.jpg" alt="customers">
+                        <img src="assets/images/6-528x515v2.png" alt="customers">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-9">
@@ -787,9 +787,21 @@
                             <h3 class="title">Download Time Captain Today</h3>
                             <p>Time Captain is a focus timer & habit management tool that helps you avoid burnout, stay focused and totally organized so you can easily manage your day-to-day tasks or todo lists</p>
                         </div>
-                        <div class="link">
+                        <!-- <div class="link">
                             <a class="main-btn" href="#">Download from App Store</a>
-                        </div>
+                        </div> -->
+                                                                                <!-- Download Buton -->
+                                                                                <div class="navbar-btn d-none d-sm-flex">
+                                                                                    <!-- <button class="btn btn-dark app-button mb-3"><i class="fa fa-apple fa-2x"></i><span class="text-uppercase ml-2">Apple store</span></button> </div> -->
+                                                                                    <a href="#" class="btn btn-store2">
+                                                                                        <span class="fa fa-apple fa-3x pull-left"></span> 
+                                                                                        <span class="btn-label">Download on the</span>
+                                                                                        <span class="btn-caption">App Store</span>
+                                                                                    </a>
+                                                                                </div>
+                        
+
+
                     </div>
                 </div>
             </div>
