updated 4 things needed

--- a/index.html
+++ b/index.html
@@ -415,6 +415,12 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="customers-thumb wow fadeInLeft" data-wow-duration="1500ms">
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
                         <img src="assets/images/6-528x515v2.png" alt="customers">
                     </div>
                 </div>
@@ -425,13 +431,21 @@
                     </div>
                     <div class="customers-content">
                         <div class="item">
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry when an unknown printer took a galley of type and scrambled it to make. </p>
+                            <p>Create a list or tasks and start the 30 min timer. </p>
                         </div>
     
                         <div class="item mt-35">
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                            <p>Maximize your focus (Stay focused) on the task without distractions during each session. </p>
                             <!-- <a class="main-btn mt-50" href="#">Discover More</a>  DISABLED-->
                         </div>
+                        <div class="item mt-40">
+                            <p>Take a long break or take a short break doesnt matter. Just be ready to focus on the next task and build good habits. </p>
+                        </div>
+
+                        <div class="item mt-45">
+                            <p>Add personalized notes to each task and get daily reminders with completion notifications that run in the background. </p>
+                        </div>
+
 
         
                     </div>
@@ -563,7 +577,7 @@
                 <div class="col-lg-7">
                     <div class="section-title text-center">
                         <span>Look Before Choosing</span>
-                        <h3 class="title">Checkout Our App Interface</h3>
+                        <h3 class="title">Checkout The App Interface</h3>
                     </div>
                 </div>
             </div>
@@ -697,13 +711,13 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="counter-item text-center mt-30 item-3 wow fadeInUp animated" data-wow-duration="1000ms" data-wow-delay="200ms">
                         <h3 class="title odometer"  data-count="9">00</h3>
-                        <span>App Improvements</span>
+                        <span>App Updates</span>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="counter-item text-center mt-30 item-4 wow fadeInUp animated" data-wow-duration="1000ms" data-wow-delay="300ms">
                         <h3 class="title odometer"  data-count="163">00</h3>
-                        <span>feature updates</span>
+                        <span>Planned Updates</span>
                     </div>
                 </div>
             </div>
