finished adding stack images

--- a/index.html
+++ b/index.html
@@ -329,32 +329,32 @@
             <div class="row brand-active">
                 <div class="col-lg-3">
                     <div class="brand-item">
-                        <a href="#"><img src="assets/images/brand.png" alt=""></a>
+                        <a href="#"><img src="assets/images/ios15.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="brand-item">
-                        <a href="#"><img src="assets/images/brand.png" alt=""></a>
+                        <a href="#"><img src="assets/images/coreData.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="brand-item">
-                        <a href="#"><img src="assets/images/brand.png" alt=""></a>
+                        <a href="#"><img src="assets/images/swiftLogo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="brand-item">
-                        <a href="#"><img src="assets/images/brand.png" alt=""></a>
+                        <a href="#"><img src="assets/images/swiftUIFinal.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="brand-item">
-                        <a href="#"><img src="assets/images/brand.png" alt=""></a>
+                        <a href="#"><img src="assets/images/xcode.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="brand-item">
-                        <a href="#"><img src="assets/images/brand.png" alt=""></a>
+                        <a href="#"><img src="assets/images/swiftUILOgo3.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -431,7 +431,7 @@
                     </div>
                     <div class="customers-content">
                         <div class="item">
-                            <p>Create a list or tasks and start the 30 min timer. </p>
+                            <p>Create unlimited lists or tasks and start the 30 min "Pomodoro" Style timers. </p>
                         </div>
     
                         <div class="item mt-35">
@@ -446,8 +446,6 @@
                             <p>Add personalized notes to each task and get daily reminders with completion notifications that run in the background. </p>
                         </div>
 
-
-        
                     </div>
                 </div>
             </div>
