--- a/index.html
+++ b/index.html
@@ -460,14 +460,15 @@
 
     <!--====== VIDEO PLAY PART START ======-->
     
-    <div class="video-play-area bg_cover" style="background-image: url(assets/images/video-play-bg.jpg);">
+    <div class="video-play-area bg_cover" style="background-image: url(assets/images/VideoBackground.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="video-play-item text-center">
-                        <a class="video-popup" href="https://www.youtube.com/watch?v=Qm2nxiLUhvM"><i class="fa fa-play"></i></a>
+                        <!-- <a class="video-popup" href="https://www.youtube.com/watch?v=Qm2nxiLUhvM"><i class="fa fa-play"></i></a> -->
+                        <a class="video-popup" href="#"><i class="fa fa-play"></i></a>
                         <p>2 Minutes demo of our application</p>
-                        <h4 class="title">Watch Our Video Presentation</h4>
+                        <h4 class="title">Video Demo of Time Captain</h4>
                     </div>
                 </div>
             </div>
@@ -525,30 +526,30 @@
                 <div class="col-lg-6">
                     <div class="testimonials-content-slide">
                         <div class="testimonials-content">
-                            <span>Our Testimonials</span>
-                            <h3 class="title">What They Are Talking</h3>
-                            <p>This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <span>Testimonials</span>
+                            <h3 class="title">Comments From Our Users</h3>
+                            <p>As a software engineer, it’s useful to break down big projects into smaller tasks, and Time Captain is perfect for that purpose.</p>
                             <div class="info">
-                                <span>Shirley Smith</span>
-                                <p>CEO - Layerdrops</p>
+                                <span>Shane Smith</span>
+                                <!-- <p>CEO - Layerdrops</p> -->
                             </div>
                         </div>
                         <div class="testimonials-content">
                             <span>Our Testimonials</span>
-                            <h3 class="title">What They Are Talking</h3>
-                            <p>This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <h3 class="title">Comments From Our Users</h3>
+                            <p>I kept track of all my school tasks in Time Captain and, in 2022, I became the first one in my family to obtain a bachelor’s degree.</p>
                             <div class="info">
-                                <span>Shirley Smith</span>
-                                <p>CEO - Layerdrops</p>
+                                <span>Samantha Ha</span>
+                                <!-- <p>CEO - Layerdrops</p> -->
                             </div>
                         </div>
                         <div class="testimonials-content">
                             <span>Our Testimonials</span>
-                            <h3 class="title">What They Are Talking</h3>
-                            <p>This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <h3 class="title">Comments From Our Users</h3>
+                            <p>Time Captain has really the way we run our small business marketing campaigns by helping us simplify projects and coordinate tons of details.</p>
                             <div class="info">
-                                <span>Shirley Smith</span>
-                                <p>CEO - Layerdrops</p>
+                                <span>Abdul Sattar</span>
+                                <!-- <p>CEO - Layerdrops</p> -->
                             </div>
                         </div>
                     </div>
