Finished updating landing page

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                     <div class="faq-content">
                         <span>Have any questions?</span>
                         <h3 class="title">Frequently Asked Questions</h3>
-                        <p>There are many variations of passages of available but majority have alteration in some by inject humour or random words. Lorem ipsum dolor sit amet.</p>
+                        <p>Here are some important questions to ask yourself before starting any Time Management routine or Pomodoro Cycles.</p>
                         <img src="assets/images/9-470x179.jpg" alt="">
                     </div>
                 </div>
@@ -636,11 +636,11 @@
                             <div class="accrodion active ">
                                 <div class="accrodion-inner">
                                     <div class="accrodion-title">
-                                        <h4>Pre and post launch mobile app</h4>
+                                        <h4>What can I actually get done in 30 minutes?</h4>
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
-                                            <p>There are many variations of passages of available but majority have alteration in some by inject humour or random words. Lorem ipsum dolor sit amet.</p>
+                                            <p>Write down a clear and realistic task. After the cycle is complete, you’ll realize that you may be under or overestimating the time you actually take to finish and be able to set more realistic goals for the next set of task cycles..</p>
                                         </div><!-- /.inner -->
                                     </div>
                                 </div><!-- /.accrodion-inner -->
@@ -648,11 +648,11 @@
                             <div class="accrodion  ">
                                 <div class="accrodion-inner">
                                     <div class="accrodion-title">
-                                        <h4>How to update application new features</h4>
+                                        <h4>How could this task be valuable to me in the future?</h4>
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
-                                            <p>There are many variations of passages of available but majority have alteration in some by inject humour or random words. Lorem ipsum dolor sit amet.</p>
+                                            <p>If you are working in an unintentional, directionless way you are basically adrift at sea. Time Captain helps you understand how your task will help you in your business will help to bring focus and passion to your work.</p>
                                         </div><!-- /.inner -->
                                     </div>
                                 </div><!-- /.accrodion-inner -->
@@ -660,11 +660,11 @@
                             <div class="accrodion ">
                                 <div class="accrodion-inner">
                                     <div class="accrodion-title">
-                                        <h4>How to connect with support</h4>
+                                        <h4>What is going to be a distraction or issue?</h4>
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
-                                            <p>There are many variations of passages of available but majority have alteration in some by inject humour or random words. Lorem ipsum dolor sit amet.</p>
+                                            <p>Every day, we get bombarded with emails, notifications, calls, meetings and some things we just can’t control, but by understanding where we might get caught up, our bottlenecks, and limitations we can have a more mindful way of work getting the control back altogether. Time captian helps remove distractions and focus on 1 task for 30 minutes.</p>
                                         </div><!-- /.inner -->
                                     </div>
                                 </div><!-- /.accrodion-inner -->
@@ -672,11 +672,12 @@
                             <div class="accrodion ">
                                 <div class="accrodion-inner">
                                     <div class="accrodion-title">
-                                        <h4>Boostup your application traffic now</h4>
+                                        <h4>What can I do to make my next Time Captain Pomodoro cycle better?</h4>
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
-                                            <p>There are many variations of passages of available but majority have alteration in some by inject humour or random words. Lorem ipsum dolor sit amet.</p>
+                                            <p>Once a task is completed, take a 10-20min break, unless you are really feeling the flow. If you are feelin’ it, then stop only when your body starts asking you for something else. Pay attention to your body. Burnout is no joke!
+                                                .</p>
                                         </div><!-- /.inner -->
                                     </div>
                                 </div><!-- /.accrodion-inner -->
