--- a/index.html
+++ b/index.html
@@ -749,7 +749,8 @@
                                 <li><a href="#"><i class="fa fa-clock-o"></i> 03 Feb</a></li>
                                 <li><a href="#"><i class="fa fa-comments-o"></i> 3 Comments</a></li>
                             </ul>
-                            <h4 class="title"><a href="#">Launch New Mobile App Marketing Pitfalls To Avoid</a></h4>
+                            <h4 class="title"><a href="#">The Pomodoro Technique: Here’s How to Use it to protect your Health
+                            </a></h4>
                             <a href="#"><i class="flaticon-right"></i></a>
                         </div>
                     </div>
