--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
                                 <li><a href="#"><i class="fa fa-clock-o"></i> 23 March</a></li>
                                 <li><a href="#"><i class="fa fa-comments-o"></i> 1 Comment</a></li>
                             </ul>
-                            <h4 class="title"><a href="#">Launch New Mobile App Marketing Pitfalls To Avoid</a></h4>
+                            <h4 class="title"><a href="#">How To Improve Your Remote Work Experience And Increase Productivity</a></h4>
                             <a href="#"><i class="flaticon-right"></i></a>
                         </div>
                     </div>
